Look for required executables and warn if not found
Sine GMT uses the executables gs, gm, ffmpeg, and xdg-open we now look to see if they are present in the path and warn if they are not.  Compilation will continue regardless of result.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,6 +212,10 @@ message(
 	"*  Build GMT supplements      : ${SUPPL}\n"
 	"*  Build GMT for developers   : ${DEVEL}\n"
 	"*  Build proto supplements    : ${PROTO}\n"
+	"*  Found GhostScript          : ${GMT_CONFIG_GS_MESSAGE}\n"
+	"*  Found GraphicsMagick       : ${GMT_CONFIG_GM_MESSAGE}\n"
+	"*  Found ffmpeg               : ${GMT_CONFIG_FFMPEG_MESSAGE}\n"
+	"*  Found open                 : ${GMT_CONFIG_OPEN_MESSAGE}\n"
 	"*\n"
 	"*  Locations:\n"
 	"*  Installing GMT in          : ${CMAKE_INSTALL_PREFIX}\n"
