--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -47,14 +47,7 @@ if (NOT OGR2OGR)
 else (NOT OGR2OGR)
 	set (GMT_CONFIG_OGR2OGR_MESSAGE "yes" CACHE INTERNAL "OGR2OGR config message")
 endif (NOT OGR2OGR)
-# Find executables needed by psconvert
-find_program (GS NAMES gs gswin64c gswin32c)
-if (NOT GS)
-	message (WARNING "Cannot find program ghostscript - gmt psconvert will be unable convert PostScript to other formats")
-	set (GMT_CONFIG_GS_MESSAGE "no" CACHE INTERNAL "GS config message")
-else (NOT GS)
-	set (GMT_CONFIG_GS_MESSAGE "yes" CACHE INTERNAL "GS config message")
-endif (NOT GS)
+# Find executable needed by psconvert
 find_program (GDAL_TRANSLATE gdal_translate)
 if (NOT GDAL_TRANSLATE)
 	message (WARNING "Cannot find program gdal_translate - psconvert will be unable convert TIFF to GeoTIFF")
@@ -78,6 +71,7 @@ else (NOT FFMPEG)
 	set (GMT_CONFIG_FFMPEG_MESSAGE "yes" CACHE INTERNAL "FFMPEG config message")
 endif (NOT FFMPEG)
 if (LINUX)
+	# Find executable needed by docs
 	find_program (XDGOPEN xdg-open)
 	if (NOT XDGOPEN)
 		message (WARNING "Cannot find program xdg-open - gmt docs will be unable to open the documentation")
@@ -85,8 +79,17 @@ if (LINUX)
 	else (NOT XDGOPEN)
 		set (GMT_CONFIG_OPEN_MESSAGE "yes" CACHE INTERNAL "OPEN config message")
 	endif (NOT XDGOPEN)
+	# Find executable needed by psconvert
+	find_program (GS NAMES gs)
+	if (NOT GS)
+		message (WARNING "Cannot find program ghostscript - gmt psconvert will be unable convert PostScript to other formats")
+		set (GMT_CONFIG_GS_MESSAGE "no" CACHE INTERNAL "GS config message")
+	else (NOT GS)
+		set (GMT_CONFIG_GS_MESSAGE "yes" CACHE INTERNAL "GS config message")
+	endif (NOT GS)
 else (LINUX)
 	set (GMT_CONFIG_OPEN_MESSAGE "yes" CACHE INTERNAL "OPEN config message")
+	set (GMT_CONFIG_GS_MESSAGE "yes" CACHE INTERNAL "GS config message")
 endif (LINUX)
 
 # Find libraries
