Fix minor typos
Just grammer and spelling fixes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,7 +42,7 @@ include (CreateDebugSym)
 # Find executable needed by gmt
 find_program (OGR2OGR ogr2ogr)
 if (NOT OGR2OGR)
-	message (WARNING "Cannot find program ogr2ogr - gmt will be unable convert Shapefiles to GMT/OGR format")
+	message (WARNING "Cannot find program ogr2ogr - gmt will be unable to convert Shapefiles to GMT/OGR format")
 	set (GMT_CONFIG_OGR2OGR_MESSAGE "no" CACHE INTERNAL "OGR2OGR config message")
 else (NOT OGR2OGR)
 	set (GMT_CONFIG_OGR2OGR_MESSAGE "yes" CACHE INTERNAL "OGR2OGR config message")
@@ -50,7 +50,7 @@ endif (NOT OGR2OGR)
 # Find executable needed by psconvert
 find_program (GDAL_TRANSLATE gdal_translate)
 if (NOT GDAL_TRANSLATE)
-	message (WARNING "Cannot find program gdal_translate - psconvert will be unable convert TIFF to GeoTIFF")
+	message (WARNING "Cannot find program gdal_translate - psconvert will be unable to convert TIFF to GeoTIFF")
 	set (GMT_CONFIG_GDAL_TRANSLATE_MESSAGE "no" CACHE INTERNAL "GDAL_TRANSLATE config message")
 else (NOT GDAL_TRANSLATE)
 	set (GMT_CONFIG_GDAL_TRANSLATE_MESSAGE "yes" CACHE INTERNAL "GDAL_TRANSLATE config message")
@@ -58,7 +58,7 @@ endif (NOT GDAL_TRANSLATE)
 # Find executables needed by movie
 find_program (GM gm)
 if (NOT GM)
-	message (WARNING "Cannot find GraphicsMagick program gm - gmt movie will be unable make animated GIFs")
+	message (WARNING "Cannot find GraphicsMagick program gm - gmt movie will be unable to make animated GIFs")
 	set (GMT_CONFIG_GM_MESSAGE "no" CACHE INTERNAL "GM config message")
 else (NOT GM)
 	set (GMT_CONFIG_GM_MESSAGE "yes" CACHE INTERNAL "GM config message")
@@ -80,9 +80,9 @@ if (LINUX)
 		set (GMT_CONFIG_OPEN_MESSAGE "yes" CACHE INTERNAL "OPEN config message")
 	endif (NOT XDGOPEN)
 	# Find executable needed by psconvert
-	find_program (GS NAMES gs)
+	find_program (GS gs)
 	if (NOT GS)
-		message (WARNING "Cannot find program ghostscript - gmt psconvert will be unable convert PostScript to other formats")
+		message (WARNING "Cannot find ghostscript program gs - gmt psconvert will be unable to convert PostScript to other formats")
 		set (GMT_CONFIG_GS_MESSAGE "no" CACHE INTERNAL "GS config message")
 	else (NOT GS)
 		set (GMT_CONFIG_GS_MESSAGE "yes" CACHE INTERNAL "GS config message")
