Fix copying extra license files (#795)
* Fix CMAKE_CURRENT_DIR to CMAKE_CURRENT_SOURCE_DIR

* Pass variable to parent scope

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -330,7 +330,8 @@ if (NOT LICENSE_RESTRICTED) # off
 	# enable Shewchuk's triangle routine
 	set (GMT_TRIANGULATE "Shewchuk" PARENT_SCOPE)
 	set (GMT_TRIANGLE_SRCS triangle.c triangle.h)
-	list (APPEND GMT_EXTRA_LICENSE_FILES ${CMAKE_CURRENT_DIR}/README.TRIANGLE)
+	list (APPEND GMT_EXTRA_LICENSE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/README.TRIANGLE)
+	set (GMT_EXTRA_LICENSE_FILES ${GMT_EXTRA_LICENSE_FILES} PARENT_SCOPE)
 else (NOT LICENSE_RESTRICTED) # on
 	# disable Shewchuk's triangle routine
 	set (GMT_TRIANGULATE "Watson" PARENT_SCOPE)
