--- a/.travis.yml
+++ b/.travis.yml
@@ -118,7 +118,9 @@ script:
     # The default action for Travis-CI is to continue running even if a command fails.
     - set -e
     - if [[ "$BUILD_DOCS" == "true" ]]; then
-        cmake --build . --target docs_depends;
+        cmake --build . --target docs_html_depends;
+        cmake --build . --target docs_man_depends;
+        cmake --build . --target docs_pdf_depends;
         (while sleep 300; do echo . ; done)&
         cmake --build . --target animation;
         kill %1;
