--- a/doc/rst/CMakeLists.txt
+++ b/doc/rst/CMakeLists.txt
@@ -30,11 +30,15 @@ if (SPHINX_FOUND)
 	copy_dir_if_different (_docs_copy_rst_tree_source
 		${CMAKE_CURRENT_SOURCE_DIR}/source/
 		${CMAKE_CURRENT_BINARY_DIR}/_source)
-	add_depend_to_target (docs_depends _docs_copy_rst_tree_source)
+	add_depend_to_target (docs_html_depends _docs_copy_rst_tree_source)
+	add_depend_to_target (docs_pdf_depends _docs_copy_rst_tree_source)
+	add_depend_to_target (docs_man_depends _docs_copy_rst_tree_source)
 	copy_dir_if_different (_docs_copy_rst_tree_themes
 		${CMAKE_CURRENT_SOURCE_DIR}/themes/
 		${CMAKE_CURRENT_BINARY_DIR}/_themes)
-	add_depend_to_target (docs_depends _docs_copy_rst_tree_themes)
+	add_depend_to_target (docs_html_depends _docs_copy_rst_tree_themes)
+	add_depend_to_target (docs_pdf_depends _docs_copy_rst_tree_themes)
+	add_depend_to_target (docs_man_depends _docs_copy_rst_tree_themes)
 	add_custom_target (_docs_rst_mkdir_verbatim
 		COMMAND ${CMAKE_COMMAND} -E make_directory
 		${CMAKE_CURRENT_BINARY_DIR}/_source/_verbatim
@@ -67,7 +71,7 @@ if (SPHINX_FOUND)
 		${CMAKE_CURRENT_BINARY_DIR}/_source
 		${CMAKE_CURRENT_BINARY_DIR}/html
 		COMMENT "Building HTML documentation...")
-	add_dependencies (docs_html docs_depends)
+	add_dependencies (docs_html docs_html_depends)
 
 	# PDF build target
 	find_program(MAKE NAMES make gmake gnumake)
@@ -82,7 +86,7 @@ if (SPHINX_FOUND)
 			COMMAND ${MAKE} -C ${CMAKE_CURRENT_BINARY_DIR}/latex
 			all-pdf LATEXOPTS=-interaction=batchmode
 			COMMENT "Building CookBook PDF...")
-		add_dependencies (docs_pdf docs_depends)
+		add_dependencies (docs_pdf docs_pdf_depends)
 
 		# Shrink PDF files
 		find_program(GS NAMES gs gswin32c gswin64c)
@@ -115,7 +119,7 @@ if (SPHINX_FOUND)
 			${CMAKE_CURRENT_BINARY_DIR}/man
 			COMMAND ${GZIP} -9 -n -f ${CMAKE_CURRENT_BINARY_DIR}/man/*.?
 			COMMENT "Building manpages...")
-		add_dependencies (docs_man docs_depends)
+		add_dependencies (docs_man docs_man_depends)
 	endif (GZIP)
 
 	# Install targets for release documentation
