To let copying GDAL data and PROJ4 share dirs into share/GDAL_DATA

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -60,6 +60,19 @@ else (DCW_PATH AND COPY_DCW)
 	set (DCW_INSTALL_PATH ${DCW_PATH})
 endif (DCW_PATH AND COPY_DCW)
 
+
+if (GDAL_DATA_PATH)
+	install (DIRECTORY ${GDAL_DATA_PATH}/
+		DESTINATION ${GMT_DATADIR}/GDAL_DATA
+		COMPONENT GDALDATA)
+endif ()
+if (PROJ_DATA_PATH)
+	install (DIRECTORY ${PROJ_DATA_PATH}/
+		DESTINATION ${GMT_DATADIR}/GDAL_DATA
+		COMPONENT GDALDATA)
+endif ()
+
+
 # add subtrees
 add_subdirectory (tools)
 
