--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -107,3 +107,32 @@ jobs:
       gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -P -Vd > test.ps
       gmt begin && gmt coast -R0/10/0/10 -JM6i -Ba -Ggray -Vd && gmt end
     displayName: Check a few simple commands
+
+
+# Windows - Compile only
+########################################################################################
+- job:
+  displayName: 'Windows | Compile only (via conda)'
+  condition: not(eq(variables['Build.Reason'], 'Schedule'))
+
+  pool:
+    vmImage: 'vs2017-win2016'
+
+  variables:
+    BUILD_DOCS: false
+    TEST: false
+
+  steps:
+
+  # Setup and compile GMT
+  - template: ci/azure-pipelines-windows-conda.yml
+
+  # Set HOME to avoid permission issue of azure-pipelines
+  - bash: echo "##vso[task.setvariable variable=HOME]D:/a/1/s/"
+    displayName: Set HOME
+
+  - script: |
+      gmt defaults -Vd
+      gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -P -Vd > test.ps
+      gmt begin && gmt coast -R0/10/0/10 -JM6i -Ba -Ggray -Vd && gmt end
+    displayName: Check a few simple commands
