--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,7 +26,7 @@ if (DO_TESTS)
 	# list of test dirs {Note: You must add new test sub-directories here}
 	set (GMT_TEST_DIRS byteswap blockmean blockmedian blockmode filter1d fitcircle gdal
 		genper gmt_core gmtconvert gmtlogo gmtinfo gmtmath gmtregress gmtselect gmtsimplify
-		gmtspatial gmtconnect gmtvector grd2xyz grdblend grdclip grdcontour grdcut
+		gmtspatial gmtconnect gmtvector grd2cpt grd2xyz grdblend grdclip grdcontour grdcut
 		grdedit grdfft grdfill grdfilter grdgradient grdhisteq grdimage grdinfo grdlandmask
 		grdmask grdmath grdpaste grdproject grdconvert grdsample grdtrack grdtrend
 		grdvector grdview grdvolume greenspline gshhg kml makecpt mapproject nearneighbor
