Simplify test scripts gmtest.in and their CMakeLists.txt files
Eliminate special provisions for clsasic versys modernize checks in the three gmtest.in scripts.  Instead, use a simple grep to detect if a script is modern mode (looking for gmt begin) and use that to handle the setting of the session ID.  Flag all known failures with the keyword GMT_KNOWN_FAILURE.  ANy script with that word in it will not be compared with an original (which often is missing) and istead will FAIL (known failure) and not add to the failure count.
THe only desired modification would be a count of known failures at the end, so we are at least reminded when running the tests.

--- a/doc/examples/CMakeLists.txt
+++ b/doc/examples/CMakeLists.txt
@@ -153,12 +153,6 @@ if (UNIX AND DO_ANIMATIONS)
 endif (UNIX AND DO_ANIMATIONS)
 
 # run examples (test)
-if (MODERNIZE_TESTS)
-	set (SCRIPT_MODE "M")
-else (MODERNIZE_TESTS)
-#set (SCRIPT_MODE "C")
-	set (SCRIPT_MODE "")
-endif (MODERNIZE_TESTS)
 
 if (DO_EXAMPLES) # AND UNIX)
 	# this file takes care of setting up the test environment
@@ -177,7 +171,7 @@ if (DO_EXAMPLES) # AND UNIX)
 		string (REPLACE "//" "/" _job ${_job})	# GLOB creates double slashes we do not want
 		add_test (NAME ${_job}
 			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-			COMMAND ${BASH} gmtest ${_job} ${SCRIPT_MODE})
+			COMMAND ${BASH} gmtest ${_job})
 	endforeach (_job ${_examples})
 elseif (DO_EXAMPLES_WIN_BATCH_DISABLED) # (DO_EXAMPLES AND WIN32)
 	# only supporting examples with installed GMT in %path%
@@ -187,7 +181,7 @@ elseif (DO_EXAMPLES_WIN_BATCH_DISABLED) # (DO_EXAMPLES AND WIN32)
 			${CMAKE_CURRENT_BINARY_DIR}/${_job} PATH)
 		add_test (NAME ${_job}
 			WORKING_DIRECTORY ${_job_path}
-			COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${_job} ${SCRIPT_MODE})
+			COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${_job})
 	endforeach (_job ${_examples_win})
 endif (DO_EXAMPLES) # AND UNIX)
 
