--- a/doc/scripts/gmtest.in
+++ b/doc/scripts/gmtest.in
@@ -7,12 +7,14 @@ test -z "$1" && exit 1
 
 # Where the current script resides (need absolute path)
 script_name="$1"
-script_mode="$2"
 script="@GMT_SOURCE_DIR@/doc/scripts/${script_name}"
 local_script=$(basename "${script_name}")
 src="@GMT_SOURCE_DIR@/doc/scripts"
 tut="@GMT_SOURCE_DIR@/doc/tutorial"
-classic=$(grep "GMT CLASSIC" "$script" -c)
+# Is it a modern mode script?
+modern=$(grep "gmt begin" "$script" -c)
+# Is it a script that is known to fail?
+known2fail=$(grep "GMT_KNOWN_FAILURE" "$script" -c)
 if ! [ -x "${script}" ]; then
   echo "error: cannot execute script ${script}." >&2
   exit 1
@@ -72,25 +74,29 @@ pscmp () {
     echo "[PASS] (without comparison)"
     return
   fi
-  # syntax: gm compare [ options ... ] reference-image [ options ... ] compare-image [ options ... ]
-  rms=$("${GRAPHICSMAGICK}" compare -density 200 -maximum-error $GRAPHICSMAGICK_RMS -highlight-color magenta -highlight-style assign -metric rmse -file "${ps%.ps}.png" "$ps" "${src}/${ps}") || pscmpfailed="yes"
-  rms=$(perl -ne 'print $1 if /Total: ([0-9.]+)/' <<< "$rms")
-  if [ -z "$rms" ]; then
-    rms="NA"
+  if [ ${known2fail} -eq 1 ]; then	# No point running the comparison since we know it fails
+      echo "${ps}: RMS Error = NA [FAIL] (known failure)"
   else
-    rms=$(printf "%.3f\n" $rms)
+    # syntax: gm compare [ options ... ] reference-image [ options ... ] compare-image [ options ... ]
+    rms=$("${GRAPHICSMAGICK}" compare -density 200 -maximum-error $GRAPHICSMAGICK_RMS -highlight-color magenta -highlight-style assign -metric rmse -file "${ps%.ps}.png" "$ps" "${src}/${ps}") || pscmpfailed="yes"
+    rms=$(perl -ne 'print $1 if /Total: ([0-9.]+)/' <<< "$rms")
+    if [ -z "$rms" ]; then
+      rms="NA"
+    else
+      rms=$(printf "%.3f\n" $rms)
+    fi
+    if [ "$pscmpfailed" ]; then
+      now=$(date "+%F %T")
+      echo "${ps}: RMS Error = $rms [FAIL]"
+      echo "$now ${ps}: RMS Error = $rms" >> "@CMAKE_CURRENT_BINARY_DIR@/fail_count.d"
+      make_pdf "$ps" # try to make pdf file
+      ((++ERROR))
+    else
+      test -z "$rms" && rms=NA
+      echo "${ps}: RMS Error = $rms [PASS]"
+    fi
   fi
-  if [ "$pscmpfailed" ]; then
-    now=$(date "+%F %T")
-    echo "${ps}: RMS Error = $rms [FAIL]"
-    echo "$now ${ps}: RMS Error = $rms" >> "@CMAKE_CURRENT_BINARY_DIR@/fail_count.d"
-    make_pdf "$ps" # try to make pdf file
-    ((++ERROR))
-  else
-    test -z "$rms" && rms=NA
-    echo "${ps}: RMS Error = $rms [PASS]"
-  fi
-}
+  }
 
 # Make sure to cleanup at end
 function cleanup()
@@ -149,19 +155,8 @@ exec_dir="@CMAKE_CURRENT_BINARY_DIR@/${script_name%.sh}"
 rm -rf "$exec_dir"
 mkdir -p "$exec_dir"
 cd "$exec_dir"
-if [ "X$script_mode" = "XM" ]; then
-	# Test a modernized version of the script instead
-	if [ $classic -eq 0 ]; then
-		echo "Modernizing $script to $local_script before testing"
-		gmtmodernize "$script" > ./${local_script}
-	else
-		echo "Cannot modernize classic GMT script ${script}. Run in classic mode" >&2
-		ln -sf "$script" .
-	fi
-else
-	# Run the original classic script via link from current directory
-	ln -sf "$script" .
-fi
+# Run the original script via link from current directory
+ln -sf "$script" .
 
 # Make a script to capture everything that can be run again
 cat > gmtest.sh << EOF
@@ -182,10 +177,11 @@ gmt set -Du PS_CHAR_ENCODING ISOLatin1+
 # Tentative PS file name
 ps="${script_name%.sh}.ps"
 # Modern mode needs a stable PPID but ctest messes that up when pipes are used
-#if [ "X$script_mode" = "XM" ]; then
+if [ ${modern} -gt 0 ]; then
 	export GMT_SESSION_NAME=\$\$
 	echo "Set GMT_SESSION_NAME = \$GMT_SESSION_NAME"
-#fi
+	script_mode=M
+fi
 # Now run the script
 . "${local_script}"
 EOF
