--- a/doc/examples/gmtest.in
+++ b/doc/examples/gmtest.in
@@ -16,6 +16,9 @@ src="@GMT_SOURCE_DIR@/doc/examples/${script_dir}"
 modern=$(grep "gmt begin" "$script" -c)
 # Is it a script that is known to fail?
 known2fail=$(grep "GMT_KNOWN_FAILURE" "$script" -c)
+# Any script override of GRAPHICSMAGICK_RMS?  Must be a comment line of the format
+# GRAPHICSMAGICK_RMS = <custom-limit>
+GRAPHICSMAGICK_RMS=$(grep "GRAPHICSMAGICK_RMS" "$script" | awk '{print $4}')
 if ! [ -x "${script}" ]; then
   echo "error: cannot execute script ${script}." >&2
   exit 1
@@ -28,7 +31,10 @@ LANG=C
 
 # Additional variables needed in gmtest
 GRAPHICSMAGICK="@GRAPHICSMAGICK@"
-GRAPHICSMAGICK_RMS="@GRAPHICSMAGICK_RMS@"
+# If no script-specific rms we use the system default
+if [ -z "$GRAPHICSMAGICK_RMS" ]; then
+	GRAPHICSMAGICK_RMS="@GRAPHICSMAGICK_RMS@"
+fi
 # choose awk
 if type gawk >/dev/null 2>&1 ; then
   export AWK=gawk
@@ -76,9 +82,9 @@ if ! [ -x "$GRAPHICSMAGICK" ]; then
 fi
 for ps in *.ps ; do
   if [ ${known2fail} -eq 1 ]; then	# No point running the comparison since we know it fails
-      echo "${ps}: RMS Error = NA [FAIL] (known failure)"
+      echo "${ps}: RMS Error = N/A [FAIL] (known failure)"
       now=$(date "+%F %T")
-      echo "$now ${ps}: RMS Error = NA [FAIL] (known failure)" >> "@CMAKE_CURRENT_BINARY_DIR@/fail_count.txt"
+      echo "$now ${ps}: RMS Error = N/A Limit = $GRAPHICSMAGICK_RMS Failure = known" >> "@CMAKE_CURRENT_BINARY_DIR@/fail_count.txt"
   else
     # syntax: gm compare [ options ... ] reference-image [ options ... ] compare-image [ options ... ]
     rms=$("${GRAPHICSMAGICK}" compare -density 200 -maximum-error $GRAPHICSMAGICK_RMS -highlight-color magenta -highlight-style assign -metric rmse -file "${ps%.ps}.png" "$ps" "${src}/${ps}") || pscmpfailed="yes"
@@ -91,11 +97,11 @@ for ps in *.ps ; do
     if [ "$pscmpfailed" ]; then
       now=$(date "+%F %T")
       echo "${ps}: RMS Error = $rms [FAIL]"
-      echo "$now ${ps}: RMS Error = $rms" >> "@CMAKE_CURRENT_BINARY_DIR@/fail_count.txt"
+      echo "$now ${ps}: RMS Error = N/A Limit = $GRAPHICSMAGICK_RMS Failure = new" >> "@CMAKE_CURRENT_BINARY_DIR@/fail_count.txt"
       make_pdf "$ps" # try to make pdf file
       ((++ERROR))
     else
-      test -z "$rms" && rms=NA
+      test -z "$rms" && rms=N/A
       echo "${ps}: RMS Error = $rms [PASS]"
     fi
   fi
